# pjotinha

./: AGENTS.md  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SummaryCards.tsx  TaskItem.tsx
src/features/calendar/: CalendarView.tsx
src/features/dashboard/: DashboardView.tsx
src/features/invoices/: InvoicesView.tsx
src/features/reports/: ReportsView.tsx
src/features/settings/: SettingsView.tsx
src/features/tasks/: TaskList.tsx  TaskSheet.tsx  TasksView.tsx  mockTasks.ts
src/lib/: date.ts
src/types/: task.ts  view.ts
